--- a/index.html
+++ b/index.html
@@ -410,7 +410,7 @@
                 <div class="stat-card">
                     <div class="stat-title">${index === 0 ? 'Líder' : index === 1 ? 'Vice-Líder' : '3º Colocado'}</div>
                     <div class="stat-name">${c['CORRETOR']}</div>
-                    <div class="stat-desc">Vendas Líquidas: R$ ${c['V.Líq'].toLocaleString('pt-BR', { minimumFractionDigits: 2, maximumFractionDigits: 2 })}</div>
+                    <div class="stat-desc">Vendas Líquidas: ${c["V.Líq"].toFixed(0)}</div>
                 </div>
             `).join('');
             statsGrid.innerHTML = statsHtml;
@@ -444,7 +444,7 @@
                     <div class="zone-icon">${zoneIcon}</div>
                     <div class="position">${position}</div>
                     <div class="name">${corretor['CORRETOR']}</div>
-                    <div class="stat-cell highlight">R$ ${corretor['V.Líq'].toLocaleString('pt-BR', { minimumFractionDigits: 2, maximumFractionDigits: 2 })}</div>
+                    <div class="stat-cell highlight">${corretor["V.Líq"].toFixed(0)}</div>
                     <div class="stat-cell">${corretor['VENDAS']}</div>
                     <div class="stat-cell">${corretor['PROPOSTAS']}</div>
                     <div class="stat-cell">${corretor['VISITAS']}</div>
@@ -465,7 +465,7 @@
             const totalVendas = corretores.reduce((sum, c) => sum + c['VENDAS'], 0);
 
             totalCorretoresSpan.textContent = totalCorretores;
-            totalVendasLiqSpan.textContent = `R$ ${totalVendasLiq.toLocaleString('pt-BR', { minimumFractionDigits: 2, maximumFractionDigits: 2 })}`;
+            totalVendasLiqSpan.textContent = `${totalVendasLiq.toFixed(0)}`;
             totalPropostasSpan.textContent = totalPropostas;
             
             const taxaConversao = totalPropostas > 0 ? ((totalVendas / totalPropostas) * 100).toFixed(2) : 0;
