--- a/index.html
+++ b/index.html
@@ -223,15 +223,40 @@
                         <div class="stat-desc">vendas realizadas</div>
                     </div>
                     <div class="stat-card">
+                        <div class="stat-title">📈 Total Vendas</div>
+                        <div class="stat-name" id="totalVendas">0</div>
+                        <div class="stat-desc">vendas</div>
+                    </div>
+                    <div class="stat-card">
                         <div class="stat-title">📋 Total Propostas</div>
                         <div class="stat-name" id="totalPropostas">0</div>
                         <div class="stat-desc">propostas enviadas</div>
+                    </div>
+                    <div class="stat-card">
+                        <div class="stat-title">👁️ Total Visitas</div>
+                        <div class="stat-name" id="totalVisitas">0</div>
+                        <div class="stat-desc">visitas realizadas</div>
+                    </div>
+                    <div class="stat-card">
+                        <div class="stat-title">🗓️ Total Agendamentos</div>
+                        <div class="stat-name" id="totalAgendamentos">0</div>
+                        <div class="stat-desc">agendamentos</div>
+                    </div>
+                    <div class="stat-card">
+                        <div class="stat-title">❌ Total Distratos</div>
+                        <div class="stat-name" id="totalDistratos">0</div>
+                        <div class="stat-desc">distratos</div>
                     </div>
                     <div class="stat-card">
                         <div class="stat-title">🎯 Taxa Conversão</div>
                         <div class="stat-name" id="taxaConversao">0%</div>
                         <div class="stat-desc">proposta → venda</div>
                     </div>
+                </div>
+
+                <div class="stat-card" style="margin-top: 20px; padding: 30px;">
+                    <h3 style="margin-bottom: 20px;">💡 Insights Especiais</h3>
+                    <div id="specialInsights" class="stats-grid"></div>
                 </div>
 
                 <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 20px; margin-top: 30px;">
@@ -245,15 +270,11 @@
                         <canvas id="zonesChart" width="400" height="300"></canvas>
                     </div>
                 </div>
-                <div class="stat-card" style="margin-top: 20px; padding: 30px;">
-                    <h3 style="margin-bottom: 20px;">💡 Insights Especiais</h3>
-                    <div id="specialInsights" class="stats-grid"></div>
-                </div>
 
                 <div class="stat-card" style="margin-top: 20px; padding: 30px;">
                     <h3 style="margin-bottom: 20px;">📈 Performance Detalhada</h3>
                     <canvas id="performanceChart" width="800" height="400"></canvas>
-                </div></div>
+                </div>
             </div>
         </div>
 
@@ -296,7 +317,10 @@
         const totalCorretoresSpan = document.getElementById("totalCorretores");
         const totalVendasLiqSpan = document.getElementById("totalVendasLiq");
         const totalPropostasSpan = document.getElementById("totalPropostas");
-        const taxaConversaoSpan = document.getElementById("taxaConversao");
+        const totalVendasSpan = document.getElementById("totalVendas");
+        const totalVisitasSpan = document.getElementById("totalVisitas");
+        const totalAgendamentosSpan = document.getElementById("totalAgendamentos");
+        const totalDistratosSpan = document.getElementById("totalDistratos");
 
         let corretores = []; // Global array to store fetched data
 
@@ -347,7 +371,7 @@
 
             let headerRowIndex = -1;
             for (let i = 0; i < lines.length; i++) {
-                if (lines[i].includes("RANKING,CRITERIO PRINCIPAL")) { 
+                if (lines[i].startsWith(",RANKING,CRITERIO PRINCIPAL")) { 
                     headerRowIndex = i;
                     break;
                 }
@@ -363,8 +387,8 @@
 
             for (let i = headerRowIndex + 1; i < lines.length; i++) {
                 const values = lines[i].split(",").map(value => value.trim());
-                if (values.length !== headers.length) {
-                    console.warn(`Linha ${i + 1} ignorada devido a número inconsistente de colunas.`);
+                // Skip rows that are too short or contain special metrics
+                if (values.length < headers.length || values[headers.indexOf('Metricas especiais')] !== '') {
                     continue;
                 }
                 const row = {};
@@ -467,12 +491,19 @@
         function updateAnalytics() {
             const totalCorretores = corretores.length;
             const totalVendasLiq = corretores.reduce((sum, c) => sum + c["V.Líq"], 0);
-            const totalPropostas = corretores.reduce((sum, c) => sum + c["PROPOSTAS"], 0);
             const totalVendas = corretores.reduce((sum, c) => sum + c["VENDAS"], 0);
+            const totalPropostas = corretores.reduce((sum, c) => sum + c["PROPOSTAS"], 0);
+            const totalVisitas = corretores.reduce((sum, c) => sum + c["VISITAS"], 0);
+            const totalAgendamentos = corretores.reduce((sum, c) => sum + c["AGENDAMENTOS"], 0);
+            const totalDistratos = corretores.reduce((sum, c) => sum + c["DISTRATOS"], 0);
 
             totalCorretoresSpan.textContent = totalCorretores;
             totalVendasLiqSpan.textContent = `${totalVendasLiq.toFixed(0)}`;
+            totalVendasSpan.textContent = totalVendas;
             totalPropostasSpan.textContent = totalPropostas;
+            totalVisitasSpan.textContent = totalVisitas;
+            totalAgendamentosSpan.textContent = totalAgendamentos;
+            totalDistratosSpan.textContent = totalDistratos;
             
             const taxaConversao = totalPropostas > 0 ? ((totalVendas / totalPropostas) * 100).toFixed(2) : 0;
             taxaConversaoSpan.textContent = `${taxaConversao}%`;
